--- a/src/components/Slider/Slider.scss
+++ b/src/components/Slider/Slider.scss
@@ -10,8 +10,9 @@
     flex-direction: column;
     flex-wrap: wrap;
     justify-content: space-between;
-    height: calc( 100% - 20px);
-    padding-bottom: 20px;
+    //height: calc( 100% - 20px);
+    //padding-bottom: 20px;
+    height: calc(100%);
 
     .Slider__Container {
         height: 100%;
@@ -51,7 +52,7 @@
         display: flex;
         flex-wrap: wrap;
         justify-content: space-between;
-        padding: 20px 20px 0;
+        padding: 20px 20px 5px;
         .SliderBtn {
             //height: 52px;
             min-width: 52px;
