--- a/src/global.scss
+++ b/src/global.scss
@@ -7,7 +7,6 @@ $breakpoints: (
 );
 
 
-
 @mixin resultBarBg($st1, $st2, $st3, $st4, $st5) {
     background: linear-gradient(
                     90deg,
@@ -42,6 +41,38 @@ $breakpoints: (
     max-width: $width;
     margin: 0 auto;
     width: 100%;
+}
+
+@mixin baseColorBtn() {
+    border-radius: 29px;
+    border: none;
+    background-color: $base-color;
+    color: #fff;
+    font-weight: 500;
+    padding: 18px 35px 19px 30px;
+    display: inline-block;
+    font-size: 16px;
+    text-transform: uppercase;
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.3);
+    width: 100%;
+    max-width: 230px;
+    text-align: center;
+
+    span {
+        padding-left: 15px;
+        position: relative;
+        top: 2px;
+
+        :global {
+            #arrow_thin,#arrow_normal {
+                width: 11px;
+                height: 15px;
+                path {
+                    fill: #fff;
+                }
+            }
+        }
+    }
 }
 
 $baseMargBottom: 30px;
@@ -83,7 +114,6 @@ button, a {
 
 
     .startScreen__Container {
-        height: 100%;
         @media (min-width: 992px) {
             padding: 100px 200px;
             @include container(1140px);
@@ -118,6 +148,7 @@ button, a {
             font-size: 16px;
             text-transform: uppercase;
             box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.3);
+            margin-bottom: 30px;
             span {
                 padding-left: 15px;
                 position: relative;
@@ -142,7 +173,7 @@ button, a {
         flex-direction: column;
         align-items: center;
         justify-content: center;
-        padding-bottom: 50px;
+        padding-bottom: 35px;
 
         @media (min-width: 992px) {
             padding: 100px 200px;
@@ -168,45 +199,51 @@ button, a {
         }
 
         .namePageBtn {
-            border-radius: 29px;
-            border: none;
-            background-color: $base-color;
-            color: #fff;
-            font-weight: 500;
-            padding: 18px 35px 19px 30px;
-            display: inline-block;
-            font-size: 16px;
-            text-transform: uppercase;
-            box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.3);
-            width: 100%;
-            max-width: 230px;
-            text-align: center;
-
-            //transition: 0.5s all ease-in-out;
-            //position: relative;
-            //left: 0px;
+            @include baseColorBtn();;
 
             &.namePageBtnAnimated {
                 animation: shake 0.82s cubic-bezier(.36,.07,.19,.97) both;
             }
+        }
 
-            span {
-                padding-left: 15px;
-                position: relative;
-                top: 2px;
 
-                :global {
-                    #arrow_thin,#arrow_normal {
-                        width: 11px;
-                        height: 15px;
-                        path {
-                            fill: #fff;
-                        }
-                    }
-                }
+    }
+}
+
+.guidePage {
+    background-color: #eeeeee;
+    .guidePage__Container {
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+
+        font-size: 17px;
+        line-height: 22px;
+
+        .guidePage__description {
+
+            padding: 40px 20px;
+
+            p {
+                text-align: center;
+                font-weight: 500;
+            }
+        }
+        .guidePage__manual {
+            padding: 30px 20px 0;
+            background-color: #fff;
+            text-align: center;
+            flex-grow: 1;
+
+            p {
+                text-align: center;
+                font-weight: 700;
             }
 
-
+            .guidePageBtn {
+                @include baseColorBtn();
+            }
         }
 
 
